--- a/MasterApp/MasterApp/MasterApp/Base.lproj/Main.storyboard
+++ b/MasterApp/MasterApp/MasterApp/Base.lproj/Main.storyboard
@@ -34,7 +34,7 @@
                                 <color key="highlightedColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <size key="shadowOffset" width="1" height="1"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ad8-fO-aNX">
+                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ad8-fO-aNX">
                                 <rect key="frame" x="370" y="516" width="203" height="30"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Start">
@@ -78,6 +78,9 @@
                             </mask>
                         </variation>
                     </view>
+                    <connections>
+                        <outlet property="startButton" destination="Ad8-fO-aNX" id="2Tw-GI-a4Q"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
